Deixando a interface mais limpa

--- a/views/template/parts/nav.ejs
+++ b/views/template/parts/nav.ejs
@@ -4,10 +4,10 @@
   </a>
   <ul class="list-unstyled ps-0">
     <li class="mb-1">
-      <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-        Home
+      <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
       </button>
-      <div class="collapse show" id="home-collapse">
+      <div class="collapse" id="home-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
           <li><a href="#" class="link-dark rounded">Overview</a></li>
           <li><a href="#" class="link-dark rounded">Updates</a></li>
@@ -17,7 +17,7 @@
     </li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-        Dashboard
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
       </button>
       <div class="collapse" id="dashboard-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -30,7 +30,7 @@
     </li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-        Orders
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
       </button>
       <div class="collapse" id="orders-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -44,7 +44,7 @@
     <li class="border-top my-3"></li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-        Account
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
       </button>
       <div class="collapse" id="account-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
