Adequação Porta 21094 King Host

--- a/views/template/parts/nav.ejs
+++ b/views/template/parts/nav.ejs
@@ -5,7 +5,7 @@
   <ul class="list-unstyled ps-0">
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
-        <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
       </button>
       <div class="collapse" id="home-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -17,7 +17,7 @@
     </li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-        <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#collection"/></svg>
       </button>
       <div class="collapse" id="dashboard-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -30,7 +30,7 @@
     </li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-        <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+        <svg class="bi me-2" width="16" height="16"><use xlink:href="#gear-fill"/></svg>
       </button>
       <div class="collapse" id="orders-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
