Ajuste menu adm

--- a/views/adm/index.ejs
+++ b/views/adm/index.ejs
@@ -4,7 +4,7 @@
   <body>
     <main>
       <h1 class="visually-hidden">Área Administrativa Persona360</h1>
-        <% include ../template/parts/nav.ejs %>
+        <% include ../template/parts/nav.adm.ejs %>
         <% include main.ejs %>
     </main>
     <% include ../template/parts/js.ejs %>
