--- a/views/adm/main.ejs
+++ b/views/adm/main.ejs
@@ -1,11 +1,3 @@
-<% 
-
-((tenant)=>{
-
-    console.log(tenant);
-    
-
-})(tenant);
-
-
-%> 
+<div class="flex-shrink-0 p-3 bg-light">
+main
+</div>
