--- a/views/adm/main.ejs
+++ b/views/adm/main.ejs
@@ -1,3 +1,10 @@
-<div class="flex-shrink-0 p-3 bg-light">
-main
-</div>
+<div class="container p-3 bg-white" style="width: 100%;" id="mainDiv"></div>
+<script>
+
+(()=>{
+
+    document.getElementById('mainDiv').innerHTML = document.domain;
+
+})();
+
+</script>
