--- a/views/adm/main.ejs
+++ b/views/adm/main.ejs
@@ -1,10 +1,11 @@
-<div class="container p-3 bg-white" style="width: 100%;" id="mainDiv"></div>
-<script>
-
-(()=>{
-
-    document.getElementById('mainDiv').innerHTML = document.domain;
-
-})();
-
-</script>
+<div class="container-fluid p-3 bg-light" style="width: 100%;" id="mainDiv">
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae malesuada lacus. Aliquam rutrum, lectus et vestibulum scelerisque, erat mauris elementum sapien, a aliquam velit magna vel orci. Fusce accumsan pellentesque libero nec iaculis. Vestibulum sed dui dui. Nulla eu ipsum nunc. Mauris eget ante elit. Aliquam convallis sodales magna, sed condimentum nunc pulvinar in. Nam urna mauris, varius pharetra vestibulum non, sagittis porta diam. Ut vitae semper lacus. Aliquam vel metus turpis. In cursus bibendum erat, quis tincidunt augue semper non. Cras eu arcu ex. Nullam cursus ante at fermentum fringilla. Integer interdum sagittis consectetur.
+</p>
+<p>
+    Proin laoreet nisl vitae leo tincidunt, eget feugiat eros volutpat. Pellentesque vulputate egestas bibendum. Quisque in iaculis massa. Integer hendrerit nec elit et euismod. Integer aliquet arcu volutpat lorem efficitur vulputate. Integer sit amet augue a lacus elementum sodales. Integer pulvinar massa sit amet scelerisque ullamcorper. In bibendum lectus a est vehicula, sit amet blandit dui sagittis.
+</p>
+<p>
+    Quisque vitae dui id orci dapibus pulvinar id vel orci. Integer scelerisque in est et ornare. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse in diam ex. Donec ex nisl, aliquam eget lectus et, elementum euismod magna. Aenean fermentum, justo sit amet viverra bibendum, leo neque ullamcorper purus, elementum tempus felis metus in est. Curabitur eros nisi, tempor nec lorem pellentesque, interdum sodales leo. Pellentesque pulvinar ornare diam, in volutpat sapien. Vivamus sit amet dolor ac mauris dictum egestas ut at lacus. Nulla ac tortor sed purus ullamcorper blandit. Nunc tincidunt ipsum porta turpis rutrum, ut volutpat orci dapibus. Etiam sollicitudin, enim sed congue feugiat, ligula lacus tempor diam, vitae eleifend elit nulla ac risus. Suspendisse sed ligula ac tellus aliquet auctor. Pellentesque enim turpis, lacinia id maximus vel, varius a erat. Integer accumsan tellus sit amet rhoncus varius. Aliquam vel facilisis turpis.
+</p>
+</div>
