Reorganização das views

--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -6,7 +6,7 @@
   <meta name="generator" content="aes. 0.1.1">
   <% include meta.seo.ejs %>
   <% include meta.share.ejs %>
-  <title><%=tenant.title%></title>
+  <title></title>
 
   <link rel="canonical" href="https://Persona360.com.br/">
 
