--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pt-br">
-  <% include ../template/parts/head.ejs %>
+  <% include parts/head.ejs %>
   <body>
     <main>
       <h1 class="visually-hidden">Área Administrativa Persona360</h1>
