--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,61 @@
 <!doctype html>
 <html lang="pt-br">
-<% include ./parts/head.ejs %>
-  <body>
-    <main>
-      <h1 class="visually-hidden">Área Administrativa Persona360</h1>
-        <% include ./parts/nav.adm.ejs %>
-    </main>
-    <% include ./parts/js.ejs %>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
+    <title>Persona360 Login</title>
+
+    <link rel="canonical" href="https://persona360.com.br">
+
+    
+
+    <!-- Bootstrap core CSS -->
+<link href="/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    
+    <!-- Custom styles for this template -->
+    <link href="css/signin.css" rel="stylesheet">
+  </head>
+  <body class="text-center">
+    
+<main class="form-signin">
+  <form>
+    <img class="mb-4" src="img/Persona360Logo.svg" alt="" width="300">
+    <h1 class="h3 mb-3 fw-normal">Acesso Restrito</h1>
+
+    <div class="form-floating">
+      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">Usuário</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <label for="floatingPassword">Senha</label>
+    </div>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Acessar</button>
+    <p class="mt-5 mb-3 text-muted">&copy; 2006–2021</p>
+  </form>
+</main>
+
+
+    
   </body>
-</html> 
+</html>
