--- a/views/adm.ejs
+++ b/views/adm.ejs
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="pt-br">
-{{>./parts/head }}
+<%-include parts/head.ejs %>
   <body>
     <main>
       <h1 class="visually-hidden">Área Administrativa Persona360</h1>
-        {{>./parts/nav.adm }}
+        <%- parts/nav.adm %>
     </main>
-    {{>./parts/js }}
+    <%- parts/js %>
   </body>
 </html> 
