--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -5,8 +5,8 @@
   <meta name="author" content="Pedro Silva, Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="aes. 0.1.1">
   <meta name="tenant" content="{{ tenant.cookie.sessionId }}">
-  {{>./parts/meta.seo }}
-  {{>./parts/meta.share }}
+  <%-include parts/meta.seo %>
+  <%-include parts/meta.share %>
   <title></title>
 
   <link rel="canonical" href="https://Persona360.com.br/">
