Adequação DigitalOcen auto deploy via GitHub

--- a/views/parts/head.ejs
+++ b/views/parts/head.ejs
@@ -34,6 +34,5 @@
   </style>
   
   <!-- Custom styles for this template -->
-  <link href="css/sidebars.css" rel="stylesheet">
-
+  <link href="css/navbar-top-fixed.css" rel="stylesheet">
 </head>
