Cover Home Page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pt-br">
-  <%-include parts/head %>
+  <%-include ./parts/head %>
   <body>
     <main>
       <h1 class="visually-hidden">Área Administrativa Persona360</h1>
