--- a/front_end/css/cover.css
+++ b/front_end/css/cover.css
@@ -7,10 +7,9 @@
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #000;
+  color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
 }
-
 
 /*
  * Base structure
@@ -19,12 +18,12 @@
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  background-color: black;
 }
 
 .cover-container {
   max-width: 42em;
 }
-
 
 /*
  * Header
