--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,23 +1,74 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <script src="https://cdn.tiny.cloud/1/y0ng3e1qg81psn5za5nbm6xtupau6oucdv28kqmh14w07dj0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-</head>
-<body>
-  <textarea id="texto">
-    Welcome to TinyMCE!
-  </textarea>
+<!doctype html>
+<html lang="en" class="h-100">
 
-  <script>
-    tinymce.init({
-      selector: 'textarea',
-      plugins: 'a11ychecker advcode casechange export formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
-      toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter pageembed permanentpen table',
-      toolbar_mode: 'floating',
-      tinycomments_mode: 'embedded',
-      tinycomments_author: 'Author name',
-      language: 'pt_BR'
-    });
-  </script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Hugo 0.84.0">
+  <title>Persona360</title>
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+
+  <!-- Bootstrap core CSS -->
+  <link href="/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
+  <!-- Custom styles for this template -->
+  <link href="css/cover.css" rel="stylesheet">
+</head>
+
+<body class="d-flex h-100 text-center text-white">
+
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+    <header class="mb-auto">
+      <div>
+        <h5 class="float-md-start mb-0 text-info">
+         Arte-e-Software
+        </h5>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModalFullscreen" href="#">
+            Suporte
+          </a>
+          <a class="nav-link" data-bs-toggle="modal" data-bs-target="#exampleModalFullscreen" href="#">
+            Painel
+          </a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="px-3">
+      <img src="img/Persona360Logo.svg">
+      <p class="lead">Conheça o Persona360, sistema integrado de prospecção orientado a eventos e centrado em pessoas. Sua escola com tecnologia de ponta, sem dor de cabeça.</p>
+      <p class="lead">
+        <button type="button" class="btn btn-lg btn-outline-info m-5" data-bs-toggle="modal" data-bs-target="#exampleModalFullscreen">
+          Teste Grátis
+        </button>
+      </p>
+    </main>
+
+    <footer class="mt-auto text-white-50">
+      <p>Persona360 by <a href="https://aes.tec.br" class="text-white">aes.tec.br</a></p>
+    </footer>
+  </div>
+
 </body>
+
 </html>
