Edição da footer da cover page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,7 +65,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>Persona360 by <a href="https://aes.tec.br" class="text-white">aes.tec.br</a></p>
+      <p>Persona360 é um produto da <a href="https://aes.tec.br" class="text-white">aes.tec.br</a></p>
     </footer>
   </div>
 
