--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
     <!-- Custom styles for this template -->
     <link href="css/starter-template.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-dark text-white">
     
 <div class="col-lg-8 mx-auto p-3 py-md-5">
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
