Home com apresentação

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Persona360">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="author" content="Pedro Silva - Arte-e-Software">
     <meta name="generator" content="Hugo 0.84.0">
     <title>Persona360</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
+    <link rel="canonical" href="https://Persona360.com.br">
 
     
 
@@ -46,7 +47,7 @@
 
   <main>
     <h1>Muito prazer, <strong>Persona360</strong>.</h1>
-    <p class="fs-5 col-md-8">Educação não é um produto. Quando um estudante e uma escola estabelecem um relacionamento, ele dura a vida inteira. Captação de alunos não é venda. É CONQUISTA. Quem sua escola está conquistando?</p>
+    <p class="fs-5 col-md-8">Educação não é produto. Quando um estudante e uma escola estabelecem um relacionamento, é para a vida inteira. Captação de alunos não é venda. É <strong>CONQUISTA</strong> Quem sua escola está conquistando?</p>
 
     <div class="mb-5">
       <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalFullscreen">
@@ -81,7 +82,7 @@
     </div>
   </main>
   <footer class="pt-5 my-5 text-muted border-top">
-    Desenvolvido por Arte-e-Software &middot; &copy; 2021
+    Desenvolvido por <img src="img/aesLogoBranco.svg" height="50" > &copy; 2021
   </footer>
 </div>
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
@@ -93,7 +94,26 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            
+            <div class="bd-example">
+              <nav>
+                <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
+                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
+                  <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
+                  <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
+                </div>
+              </nav>
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade active show" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                  <p><strong>This is some placeholder content the Home tab's associated content.</strong> Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. You can use it with tabs, pills, and any other <code>.nav</code>-powered navigation.</p>
+                </div>
+                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                  <p><strong>This is some placeholder content the Profile tab's associated content.</strong> Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. You can use it with tabs, pills, and any other <code>.nav</code>-powered navigation.</p>
+                </div>
+                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+                  <p><strong>This is some placeholder content the Contact tab's associated content.</strong> Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling. You can use it with tabs, pills, and any other <code>.nav</code>-powered navigation.</p>
+                </div>
+              </div>
+              </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
