--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
         }
       }
     </style>
-
+˜
     <!-- Custom styles for this template -->
     <link href="css/starter-template.css" rel="stylesheet">
   </head>
@@ -47,9 +47,9 @@
     <p class="fs-5 col-md-8">Educação não é produto. Quando um estudante e uma escola estabelecem um relacionamento, é para a vida inteira. Captação de alunos não é venda. É <strong>CONQUISTA</strong> Quem sua escola está conquistando?</p>
 
     <div class="mb-5">
-      <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalFullscreen">
+      <a href="/conhecer/"><button type="button" class="btn btn-lg btn-primary">
         Conheça o Persona360
-      </button>
+      </button></a>
     </div>
 
     <hr class="col-3 col-md-2 mb-5">
