Socket IO Primeira implantação

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -100,7 +100,6 @@
     Desenvolvido por <img src="img/aesLogoBranco.svg" height="50" > &copy; 2021
   </footer>
 </div>
-    <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-
+   <%-include ./parts/js.ejs %>
   </body>
 </html>
