--- a/views/parts/js.ejs
+++ b/views/parts/js.ejs
@@ -1,2 +1,4 @@
 <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/sidebars.js"></script>
+<script src="socket.io-4.1.2/socket.io.min.js"></script>
+<script src="js/socket.io.client.js"></script>
