--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,6 +50,10 @@
       <a href="/conhecer/"><button type="button" class="btn btn-lg btn-primary">
         Conheça o Persona360
       </button></a>
+      &nbsp;
+      <a href="#" data-bs-toggle="modal" data-bs-target="#modalChat"><button type="button" class="btn btn-lg btn-primary">
+        Chat
+      </button></a>
     </div>
 
     <hr class="col-3 col-md-2 mb-5">
@@ -78,15 +82,30 @@
       </div>
     </div>
 
-    <div class="modal fade" id="exampleModalFullscreen" tabindex="-1" aria-labelledby="exampleModalFullscreenLabel" aria-hidden="true">
+    <div class="modal fade" id="modalChat" tabindex="-1" aria-labelledby="modalChatLabel" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title h4" id="exampleModalFullscreenLabel">Full screen modal</h5>
+            <h5 class="modal-title h4" id="modalChatLabel">Full screen modal</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
+          <script src="jquery-1.10.2/jquery.min.js"></script>
+          <script src="js/chat.js"></script>
           <div class="modal-body">
-            ...
+            <ul class="pages">
+              <li class="chat page">
+                <div class="chatArea">
+                  <ul class="messages"></ul>
+                </div>
+                <input class="inputMessage" placeholder="Type here..."/>
+              </li>
+              <li class="login page">
+                <div class="form">
+                  <h3 class="title">What's your nickname?</h3>
+                  <input class="usernameInput" type="text" maxlength="14" />
+                </div>
+              </li>
+            </ul>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
