--- a/views/home.ejs
+++ b/views/home.ejs
@@ -84,7 +84,7 @@
     <%-include ./parts/chat.ejs %>
   </main>
   <footer class="pt-5 my-5 text-muted border-top">
-    Desenvolvido por <img src="img/arte-e-software.png" height="50" > &copy; 2021
+    Desenvolvido por <img src="img/aesLogoBranco.svg" height="50" > &copy; 2021
   </footer>
 </div>
    <%-include ./parts/js.ejs %>
