httpCall() no lugar de httpRequest()

--- a/views/blocks/javascript.ejs
+++ b/views/blocks/javascript.ejs
@@ -1,7 +1,8 @@
 <script src="assets/vendor/axios/axios.min.js"></script>
 <script src="assets/javascript/utils/httpRequest.js"></script>
 <script src="assets/javascript/utils/alert.js"></script>
-<script src="assets/javascript/build.js"></script>
 <script src="assets/vendor/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/javascript/sidebars.js"></script>
 <script src="assets/vendor/socket.io-4.1.2/socket.io.min.js"></script>
+<script src="assets/javascript/utils/httpCall.js"></script>
+<script src="assets/javascript/build.js"></script>
