--- a/views/blocks/include/main-adm.ejs
+++ b/views/blocks/include/main-adm.ejs
@@ -1,25 +1,25 @@
-<% // include server return 
+<% // server-side
 if(error) { 
-    // server return 
+    // flush
     %>
     <section class="section my-3">
     <h5>
         <%=error%>
     </h5>
     </section>
-    <% // end server return 
-} else { 
-    // server return 
+    <% // server-side
+} else { /* { else of if(error) */
+    // flush
     %>
     <section class="section mt-3 mb-3">
-        <h4>Revise as <%=entities.length%> tabelas </h4>
+        <h4>Revise as <%=entity.length%> tabelas </h4>
         <p>Eventuais alterações deverão ser feitas diretamente no arquivo
-        <strong>back-end/config/entities.json</strong>
+        <strong>back-end/config/config.json</strong>
         </p>
         <hr>
     </section>
     <section class="section mb-5">
-        <% // end server return 
+        <% // server-side
         let thisEntityName = 'No Entity'
             , fieldsMap = field => {
                 return `
@@ -32,22 +32,10 @@ if(error) {
                 form: false
                 }`
             }
-        for(let i in entities) {
-
-            thisEntityName = entities[i].name
-
-            // insiro a pk no iniício da array de filds
-            //entities[i].fields.push(pk)
-            entities[i].fields.map((field) => { return fieldsMap(field) }, entities[i].fields)
-            arrayEntities.push( `
-                {
-                name: '${thisEntityName}', 
-                namespace: [${entities[i].namespace.map((name) => { return `'${name}'` }).join(', ')}],
-                values: [${entities[i].values.map((row) => { return row.map((value) => { return `'${value}'` }).join(', ') })}],
-                fields: [${entities[i].fields}]
-                }`
-                )
-        // server return
+        for(let i in entity) {
+            thisEntityName = entity[i].name
+            entity[i].fields.map((field) => { return fieldsMap(field) }, entity[i].fields)
+        // flush
         %>
         <div class="accordion mb-3" id="accordion<%=thisEntityName%>">
             <div class="accordion-item">
@@ -91,37 +79,35 @@ if(error) {
                                             <%=false%>
                                         </td>
                                  </tr>
-                                <% // end server return 
-                                
-                                let fields = entities[i].fields
-
+                                <% // server-side
+                                let fields = entity[i].fields
                                 for(let ii in fields)
                                 { 
-                                    // server return 
-                                    %>
-                                    <tr>
-                                    <td>
-                                        <%=fields[ii].name%>
-                                    </td>
-                                    <td>
-                                        <%=fields[ii].type%>
-                                    </td>
-                                    <td>
-                                        <%=fields[ii].length%>
-                                    </td>
-                                    <td>
-                                        <%=!fields[ii].null%>
-                                    </td>
-                                    <td>
-                                        <%=fields[ii].searchable%>
-                                    </td>
-                                    <td>
-                                        <%=fields[ii].default%>
-                                    </td>
-                                    </tr>
-                                <% // end server return 
-                                } 
-                                // server return 
+                                // flush
+                                %>
+                                <tr>
+                                <td>
+                                    <%=fields[ii].name%>
+                                </td>
+                                <td>
+                                    <%=fields[ii].type%>
+                                </td>
+                                <td>
+                                    <%=fields[ii].length%>
+                                </td>
+                                <td>
+                                    <%=!fields[ii].null%>
+                                </td>
+                                <td>
+                                    <%=fields[ii].searchable%>
+                                </td>
+                                <td>
+                                    <%=fields[ii].default%>
+                                </td>
+                                </tr>
+                                <% // server-side
+                                } /* }of for(let ii in fields) */ 
+                                // flush
                                 %>
                                 </tbody>
                             </table>
@@ -130,19 +116,21 @@ if(error) {
                 </div>
             </div>
         </div>
-        <% // end server return 
-        } // end for(let i in entities) 
-        // server return 
+        <% 
+        // server-side
+        } /* }of for(let i in entity) */
+        // flush
         %>
         </section>
-        <div class="d-grid gap-2 mb-5">
-        <button class="btn btn-success btn-lg" id="btnBuild" onclick="build()">
+        <div class="d-grid gap-2 mb-5" id="divButton">
+        <button class="btn btn-success btn-lg" id="btnBuild" onclick="httpCall('build', { caller: document.baseURI }, build)">
             Rodar Build
         </button>
         </div>
-<% // end server return 
-} // end if(error) 
-// server return
-%>
-<section class="section my-3"></section>
-<% // end include server return %>
+        <% 
+        // server-side
+        } /* }of else if(error) */
+        // flush
+        %>
+        <section class="section my-3"></section>
+        <% // flush include/main-adm.ejs %>
