httpCall virou simplesmente call

--- a/views/blocks/include/main-adm.ejs
+++ b/views/blocks/include/main-adm.ejs
@@ -123,7 +123,7 @@ if(error) {
         %>
         </section>
         <div class="d-grid gap-2 mb-5" id="divButton">
-        <button class="btn btn-success btn-lg" id="btnBuild" onclick="httpCall('build', { caller: document.baseURI }, build)">
+        <button class="btn btn-success btn-lg" id="btnBuild" onclick="call('build', { caller: document.baseURI }, build)">
             Rodar Build
         </button>
         </div>
