--- a/views/aes.ejs
+++ b/views/aes.ejs
@@ -8,8 +8,7 @@
                 <main class="flex">
                     <div class="container" id="main-aes">
                         <div class="d-grid gap-2">
-                            <button class="btn btn-primary btn-lg" type="button"
-                                onclick="request('/api', { entity: 'aes', module: 'create', params: { client: document.baseURI }}, helper, false)">
+                            <button class="btn btn-primary btn-lg" type="button" id="btnCreate">
                                 Create
                             </button>
                         </div>
