--- a/views/blocks/javascript.ejs
+++ b/views/blocks/javascript.ejs
@@ -7,3 +7,4 @@
 <script src="assets/vendor/socket.io-4.1.2/socket.io.min.js"></script>
 <script src="assets/javascript/utils/call.js"></script>
 <script src="assets/javascript/build.js"></script>
+<script src="assets/javascript/utils/loader.js"></script>
