--- a/views/blocks/alert.ejs
+++ b/views/blocks/alert.ejs
@@ -1,3 +1,1 @@
-<div class="container mt-2" id="container-alert">
-    <div class="container" id="alert"></div>
-</div>
+<div class="container mt-2" id="container-alert"><div class="container" id="alert"></div></div>
