--- a/views/blocks/nav-adm.ejs
+++ b/views/blocks/nav-adm.ejs
@@ -1,6 +1,6 @@
 <div class="flex-shrink-0 p-3 bg-white" style="width: 200px;">
   <a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
-    <img height="60rem" src="img/Persona360LogoTexto.svg">
+    <img height="60rem" src="assets/images/Persona360LogoTexto.svg">
   </a>
   <ul class="list-unstyled ps-0">
     <li class="mb-1">
