--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -1,5 +1,19 @@
 <link rel="canonical" href="https://Persona360.com.br/">
 <link href="assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-<style>.bd-placeholder-img { font-size: 1.125rem; text-anchor: middle; -webkit-user-select: none; -moz-user-select: none; user-select: none; } @media (min-width: 768px) { .bd-placeholder-img-lg { font-size: 3.5rem; } }</style>
-<link href="assets/css/navbar-top-fixed.css" rel="stylesheet">
+<style>
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+        }
+    }
+</style>
+    <link href="assets/css/navbar-top-fixed.css" rel="stylesheet">
